A.F....... [ZBX-1357] enabled Chinese (China) locale to be displayed by default (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese, Korean, Polish and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
...G...... [ZBX-9143] improved proc.num under Windows to handle more processes (dimir)
...G...... [ZBX-9232] fixed incomplete eventlog messages (igors)
..F....... [ZBX-9257] fixed displaying missing history links in trigger context menu (Ivo)
..F....... [ZBX-9257] added missing host prefix before items in trigger context menu if trigger belongs to multiple hosts (Ivo)
..F....... [ZBX-9257] changed displaying host list from vertical to horizontal if trigger belongs to multiple hosts in Monitoring->Trigger status page (Ivo)
........S. [ZBX-9285] fixed memory leak when processing host prototypes (Sasha)
.......PS. [ZBX-9279] optimized VMware requests to reduce amount of transferred data (wiper)
..F....... [ZBX-9087] fixed DB_ID validation expression to properly validate upper bound of received value and fixed various front-end forms not properly validating IDs (Krists, Ivo)
.......PS. [ZBX-7719] added configurable timeout for VMware data gathering requests (wiper)
...G...... [ZBX-9241] fixed possible vfs.fs.discovery item crash on AIX systems (wiper)
.......PS. [ZBX-9104] fixed repeated error messaging if ssh channel failed to close (igors)
...G...... [ZBX-9183] fixed eventlog message collecting in case of error formatting the log message; thanks to Kodai Terashima (dimir)
A.F....... [ZBX-9224] fixed audit log for failed login attempts (Oleg)
...G...... [ZBX-9233] fixed processing of bogus negative value of performance couter (igors)
.......PS. [ZBXNEXT-2354] fixed VMware virtual machine network and disk transmission rates being reported in kilobytes rather than bytes (wiper)